# kvantuma

./: .gitignore  Cargo.toml
assets/shaders/: basic.wgsl  color.wgsl  color_ui.wgsl  skinned.wgsl  skybox.wgsl  text.wgsl
cdylib/: Makefile  plugin.c
engine/: Cargo.toml
engine/benches/: ecs.rs
engine/src/: error.rs  lib.rs  main.rs  utils.rs
engine/src/app/: base.rs  helper.rs  mod.rs  time.rs  window.rs
engine/src/ecs/: archetype.rs  component.rs  defines.rs  impls.rs  world.rs
engine/src/render/: animation.rs  buffer.rs  camera.rs  draw_context.rs  error.rs  material.rs  mesh.rs  mod.rs  pass.rs  pipeline.rs  registry.rs  shader_resource.rs  texture.rs
engine/src/ui/: atlas.rs  material.rs  mod.rs
scene/: Cargo.toml  README.md  build.rs
scene/src/: main.rs
src/: main.rs  main_old.rs  singletons.rs
src/ecs/: archetype.rs  component.rs  defines.rs  impls.rs  mod.rs  system.rs  world.rs
src/game/: mod.rs
src/menu/: main_menu.rs
src/render/: material.rs  mesh.rs  mod.rs  pass.rs  registry.rs
src/systems/: camera.rs  ui.rs
src/ui/: atlas.rs  components.rs  key.rs  mod.rs  msg.rs
