[package]
name = "kvantuma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bincode = "2.0.1"
bitflags = "2.11.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.0", features = ["serde", "bytemuck", "rand"] }
gltf = { version = "1.4.1", features = ["extras"] }
image = "0.25.9"
kira = "0.12.0"
log = "0.4.29"
parking_lot = "0.12.5"
pollster = "0.4.0"
pretty-type-name = "1.0.1"
pretty_env_logger = "0.5.0"
rand = "0.10.0"
rapier3d = { version = "0.32.0", features = ["debug-render"] }
rayon = "1.11.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.1.1"
taffy = "0.9.2"
thiserror = "2.0.18"
wgpu = "27.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
glfw = { version = "0.61.0", default-features = false, features = ["x11", "raw-window-handle-v0-6"] }

[target.'cfg(target_os = "windows")'.dependencies]
glfw = { version = "0.61.0", default-features = false, features = ["raw-window-handle-v0-6"] }

[target.'cfg(target_os = "macos")'.dependencies]
glfw = { version = "0.61.0", default-features = false, features = ["raw-window-handle-v0-6"] }

[dev-dependencies]
criterion = "0.5"
hecs = "0.10"

[[bench]]
name = "ecs"
harness = false