[package]
name = "kvantuma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
log = "0.4.29"
pretty_env_logger = "0.5.0"
glam = { version = "0.32.0", features = ["serde", "bytemuck", "rand"] }
taffy = "0.9.2"

xastge = { path = "engine" }
slotmap = "1.1.1"
flecs_ecs = "0.2.2"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
libloading = "0.9.0"

[profile.dev]
incremental = true
debug = 0
